@@ -11,9 +11,18 @@
 
 #include <vector>
 #include <stdexcept>
+#include <fstream>
 
 MCInfoProcessor::MCInfoProcessor(const char *name): 
-  cafe::Processor(name), m_truthPKey(), m_isSignal(false), m_mcDB(0)
+  cafe::Processor(name),
+  m_truthPKey(),
+  m_isSignal(false),
+  m_mcDB(0),
+  m_buildDB(false),
+  m_runNumber(0),
+  m_channelNumber(0),
+  m_eventCounter(0),
+  m_hardproc()
 {
   cafe::Config config(name);
   m_isSignal = config.get("IsSignal",false);
@@ -21,6 +30,8 @@ MCInfoProcessor::MCInfoProcessor(const char *name):
   std::string mcDBFile = config.get("MCDBFile","SUSYTools/data/mc12_8TeV/");
   bool mcDBextended = config.get("MCDBExtended",false);
   m_mcDB = new SUSY::CrossSectionDB(mcDBFile,mcDBextended);
+
+  m_buildDB = config.get("BuildDB",false);
 }
 
 
@@ -32,7 +43,7 @@ bool MCInfoProcessor::processEvent(xAOD::TEvent& event)
 
   const xAOD::EventInfo* eventInfo = 0;
   if ( ! event.retrieve( eventInfo, "EventInfo").isSuccess() ) throw std::runtime_error("Could not retrieve EventInfo");
-  //uint32_t mc_channel_number = eventInfo->mcChannelNumber();
+  uint32_t mc_channel_number = eventInfo->mcChannelNumber();
 
   unsigned int* finalstate = new unsigned int;
   *finalstate = 0;
@@ -46,6 +57,22 @@ bool MCInfoProcessor::processEvent(xAOD::TEvent& event)
   if ( !store->record<unsigned int>(finalstate,"HardProcess").isSuccess()){
     throw std::runtime_error("Could not store HarProcess");
   }
+
+  if ( m_buildDB ) {
+    if ( m_eventCounter == 0 ){
+      m_runNumber = eventInfo->runNumber();
+      m_channelNumber = mc_channel_number;
+    }
+    else {
+      // sanity checks
+      if ( m_runNumber != eventInfo->runNumber() ) throw std::logic_error("HardProcDBBuider cannot run on multiple samples");
+      if ( m_channelNumber != mc_channel_number ) throw std::logic_error("HardProcDBBuider cannot run on multiple samples");
+    }
+    m_eventCounter++;
+    if ( m_hardproc.find(*finalstate) == m_hardproc.end() ) m_hardproc[*finalstate] = 0;
+    m_hardproc[*finalstate] ++;
+  }
+
 
   return true;
 }
@@ -125,6 +152,32 @@ void MCInfoProcessor::normWeights(xAOD::TEvent& event,
   }
 }
 
+void MCInfoProcessor::finish()
+{
+  if ( m_buildDB ) {
+    std::ofstream  jsonOut("harproc.json");
+    jsonOut << "{" << std::endl;
+    jsonOut << " \"runNumber\": " << m_runNumber << ","  << std::endl;
+    jsonOut << " \"channelNumber\": " << m_channelNumber << ","  << std::endl;
+    jsonOut << " \"hardProcCounters\": [" << std::endl;
+    bool first = true;
+    for ( auto& item : m_hardproc ) {
+      if ( first ) {
+	first = false;
+      }
+      else {
+	jsonOut << ",";
+      }
+      jsonOut << "    {" << std::endl;
+      jsonOut << "      \"finaleState\": " << item.first << ","  <<std::endl;
+      jsonOut << "      \"count\": " << item.second <<std::endl;
+      jsonOut << "    }";
+    }
+    jsonOut << std::endl << "  ]" << std::endl;
+    jsonOut << "}" << std::endl;
+    jsonOut.close();
+  }
+}
 
 
 ClassImp(MCInfoProcessor);
